test framework preparation